Redesign the Trello project page and migrate to bootstrap 5

--- a/src/app/@theme/assets/scss/theme-colour.scss
+++ b/src/app/@theme/assets/scss/theme-colour.scss
@@ -1,11 +1,11 @@
 $palette: (
   theme: (
-    text-heading: #111111,
-    text-paragraph: #575962,
+    text-heading: #181C32,
+    text-paragraph: #3F4254,
     text-white: #FFFFFF,
 
-    backdrop: #f2f3f8,
-    backdrop-outline: #d7dfe3,
+    backdrop: #EEF0F8,
+    backdrop-outline: #F3F6F9,
 
     primary-light: #4886ff,
 
