--- a/src/app/@theme/components/modal/modal-footer.component.html
+++ b/src/app/@theme/components/modal/modal-footer.component.html
@@ -1,7 +1,7 @@
 <div class="modal-footer">
   <ng-content></ng-content>
 
-  <button type="button" class="btn btn-secondary" data-dismiss="modal">
+  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
     Close
   </button>
 </div>
