--- a/src/app/pages/@theme/cards/cards.component.html
+++ b/src/app/pages/@theme/cards/cards.component.html
@@ -1,139 +1,131 @@
-<div class="row">
-  <div class="col-xl-12">
-    <page-header></page-header>
+<page-header></page-header>
+
+<page-body>
+  <div class="row">
+    <div class="col-xl-6">
+      <card>
+        <card-header>
+          <card-title>
+            <h1> Project 1 </h1>
+            <p> Date: 00/00/0000 </p>
+          </card-title>
+
+          <card-tools>
+            <button class="btn">
+              Button 1
+            </button>
+
+            <button class="btn">
+              Button 2
+            </button>
+          </card-tools>
+        </card-header>
+
+        <card-body>
+          Description Text
+        </card-body>
+      </card>
+    </div>
+
+    <div class="col-xl-6">
+      <card>
+        <card-header>
+          <card-title>
+            <h1> Project 1 </h1>
+          </card-title>
+        </card-header>
+
+        <card-body>
+          Description Text
+        </card-body>
+      </card>
+    </div>
+
+    <div class="col-xl-6">
+      <card>
+        <card-header>
+          <card-title>
+            <h1> Project 1 </h1>
+          </card-title>
+
+          <card-tools>
+            <button class="btn">
+              Button 1
+            </button>
+
+            <button class="btn">
+              Button 2
+            </button>
+          </card-tools>
+        </card-header>
+
+        <card-body>
+          Description Text
+        </card-body>
+      </card>
+    </div>
+
+    <div class="col-xl-6">
+      <card>
+        <card-header>
+          <card-title>
+            <h1> Project 1 </h1>
+          </card-title>
+        </card-header>
+
+        <card-body>
+          Description Text
+        </card-body>
+      </card>
+    </div>
+
+    <div class="col-xl-4">
+      <card>
+        <card-header>
+          <card-title>
+            <h1> Project 1 </h1>
+            <p> Sub Title </p>
+          </card-title>
+        </card-header>
+
+        <card-body>
+          <img src="https://3c1703fe8d.site.internapcdn.net/newman/gfx/news/hires/2018/2-dog.jpg" alt="Dog Image">
+        </card-body>
+      </card>
+    </div>
+
+    <div class="col-xl-8">
+      <card>
+        <card-header>
+          <card-title>
+            <h1> Project 1 </h1>
+          </card-title>
+        </card-header>
+
+        <card-body>
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th>First name</th>
+                <th>Last name</th>
+                <th>Age</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Jill</td>
+                <td>Smith</td>
+                <td>50</td>
+              </tr>
+              <tr>
+                <td>Eve</td>
+                <td>Jackson</td>
+                <td>94</td>
+              </tr>
+            </tbody>
+          </table>
+        </card-body>
+      </card>
+    </div>
   </div>
-
-  <div class="col-xl-6">
-    <card>
-      <card-header>
-        <card-tools>
-          <button class="btn">
-            Button 1
-          </button>
-
-          <button class="btn">
-            Button 2
-          </button>
-        </card-tools>
-
-        <card-title>
-          Project 1
-        </card-title>
-
-        <card-subtitle>
-          Date: 00/00/0000
-        </card-subtitle>
-      </card-header>
-
-      <card-body>
-        Description Text
-      </card-body>
-    </card>
-  </div>
-
-  <div class="col-xl-6">
-    <card>
-      <card-header>
-        <card-title>
-          Project 1
-        </card-title>
-
-        <card-subtitle>
-          Date: 00/00/0000
-        </card-subtitle>
-      </card-header>
-
-      <card-body>
-        Description Text
-      </card-body>
-    </card>
-  </div>
-
-  <div class="col-xl-6">
-    <card>
-      <card-header>
-        <card-tools>
-          <button class="btn">
-            Button 1
-          </button>
-
-          <button class="btn">
-            Button 2
-          </button>
-        </card-tools>
-
-        <card-title>
-          Project 1
-        </card-title>
-      </card-header>
-
-      <card-body>
-        Description Text
-      </card-body>
-    </card>
-  </div>
-
-  <div class="col-xl-6">
-    <card>
-      <card-header>
-        <card-title>
-          Project 1
-        </card-title>
-      </card-header>
-
-      <card-body>
-        Description Text
-      </card-body>
-    </card>
-  </div>
-
-  <div class="col-xl-4">
-    <card>
-      <card-header>
-        <card-title>
-          Project 1
-        </card-title>
-
-        <card-subtitle>
-          Sub Title
-        </card-subtitle>
-
-        <img mat-card-image src="https://3c1703fe8d.site.internapcdn.net/newman/gfx/news/hires/2018/2-dog.jpg">
-      </card-header>
-    </card>
-  </div>
-
-  <div class="col-xl-8">
-    <card>
-      <card-header>
-        <card-title>
-          Project 1
-        </card-title>
-      </card-header>
-
-      <card-body>
-        <table class="table table-hover">
-          <thead>
-            <tr>
-              <th>First name</th>
-              <th>Last name</th>
-              <th>Age</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Jill</td>
-              <td>Smith</td>
-              <td>50</td>
-            </tr>
-            <tr>
-              <td>Eve</td>
-              <td>Jackson</td>
-              <td>94</td>
-            </tr>
-          </tbody>
-        </table>
-      </card-body>
-    </card>
-  </div>
-</div>
+</page-body>
