--- a/src/app/pages/@theme/modals/modals.component.html
+++ b/src/app/pages/@theme/modals/modals.component.html
@@ -1,120 +1,121 @@
-<div class="row">
-  <div class="col-xl-12">
-    <page-header></page-header>
+<page-header></page-header>
+
+
+<page-body>
+  <div class="row">
+    <div class="col-xl-4">
+      <card>
+        <card-header>
+          <card-title>
+            <h1> Default </h1>
+          </card-title>
+        </card-header>
+
+        <card-body>
+          <button class="btn btn-primary col-xl-12" data-bs-toggle="modal" data-bs-target="#defaultModal">
+            Launch Modal
+          </button>
+        </card-body>
+      </card>
+    </div>
+
+    <div class="col-xl-4">
+      <card>
+        <card-header>
+          <card-title>
+            <h1> Vertically Centered </h1>
+          </card-title>
+        </card-header>
+
+        <card-body>
+          <button class="btn btn-primary col-xl-12" data-bs-toggle="modal" data-bs-target="#verticalCenteredModal">
+            Launch Modal
+          </button>
+        </card-body>
+      </card>
+    </div>
+
+    <div class="col-xl-4">
+      <card>
+        <card-header>
+          <card-title>
+            <h1> Scrolling </h1>
+          </card-title>
+        </card-header>
+
+        <card-body>
+          <button class="btn btn-primary col-xl-12" data-bs-toggle="modal" data-bs-target="#scrollingModal">
+            Launch Modal
+          </button>
+        </card-body>
+      </card>
+    </div>
+
+    <div class="col-xl-4">
+      <card>
+        <card-header>
+          <card-title>
+            <h1> Small </h1>
+          </card-title>
+        </card-header>
+
+        <card-body>
+          <button class="btn btn-primary col-xl-12" data-bs-toggle="modal" data-bs-target="#smallModal">
+            Launch Modal
+          </button>
+        </card-body>
+      </card>
+    </div>
+
+    <div class="col-xl-4">
+      <card>
+        <card-header>
+          <card-title>
+            <h1> Large </h1>
+          </card-title>
+        </card-header>
+
+        <card-body>
+          <button class="btn btn-primary col-xl-12" data-bs-toggle="modal" data-bs-target="#largeModal">
+            Launch Modal
+          </button>
+        </card-body>
+      </card>
+    </div>
+
+    <div class="col-xl-4">
+      <card>
+        <card-header>
+          <card-title>
+            <h1> Extra Large </h1>
+          </card-title>
+        </card-header>
+
+        <card-body>
+          <button class="btn btn-primary col-xl-12" data-bs-toggle="modal" data-bs-target="#extraLargeModal">
+            Launch Modal
+          </button>
+        </card-body>
+      </card>
+    </div>
+
+    <div class="col-xl-4">
+      <card>
+        <card-header>
+          <card-title>
+            <h1> Confirmation </h1>
+          </card-title>
+        </card-header>
+
+        <card-body>
+          <button class="btn btn-primary col-xl-12" data-bs-toggle="modal" data-bs-target="#confirmationModal">
+            Launch Modal
+          </button>
+        </card-body>
+      </card>
+    </div>
   </div>
-
-  <div class="col-xl-4">
-    <card>
-      <card-header>
-        <card-title>
-          Default
-        </card-title>
-      </card-header>
-
-      <card-body>
-        <button class="btn btn-primary col-xl-12" data-toggle="modal" data-target="#defaultModal">
-          Launch Modal
-        </button>
-      </card-body>
-    </card>
-  </div>
-
-  <div class="col-xl-4">
-    <card>
-      <card-header>
-        <card-title>
-          Vertically Centered
-        </card-title>
-      </card-header>
-
-      <card-body>
-        <button class="btn btn-primary col-xl-12" data-toggle="modal" data-target="#verticalCenteredModal">
-          Launch Modal
-        </button>
-      </card-body>
-    </card>
-  </div>
-
-  <div class="col-xl-4">
-    <card>
-      <card-header>
-        <card-title>
-          Scrolling
-        </card-title>
-      </card-header>
-
-      <card-body>
-        <button class="btn btn-primary col-xl-12" data-toggle="modal" data-target="#scrollingModal">
-          Launch Modal
-        </button>
-      </card-body>
-    </card>
-  </div>
-
-  <div class="col-xl-4">
-    <card>
-      <card-header>
-        <card-title>
-          Small
-        </card-title>
-      </card-header>
-
-      <card-body>
-        <button class="btn btn-primary col-xl-12" data-toggle="modal" data-target="#smallModal">
-          Launch Modal
-        </button>
-      </card-body>
-    </card>
-  </div>
-
-  <div class="col-xl-4">
-    <card>
-      <card-header>
-        <card-title>
-          Large
-        </card-title>
-      </card-header>
-
-      <card-body>
-        <button class="btn btn-primary col-xl-12" data-toggle="modal" data-target="#largeModal">
-          Launch Modal
-        </button>
-      </card-body>
-    </card>
-  </div>
-
-  <div class="col-xl-4">
-    <card>
-      <card-header>
-        <card-title>
-          Extra Large
-        </card-title>
-      </card-header>
-
-      <card-body>
-        <button class="btn btn-primary col-xl-12" data-toggle="modal" data-target="#extraLargeModal">
-          Launch Modal
-        </button>
-      </card-body>
-    </card>
-  </div>
-
-  <div class="col-xl-4">
-    <card>
-      <card-header>
-        <card-title>
-          Confirmation
-        </card-title>
-      </card-header>
-
-      <card-body>
-        <button class="btn btn-primary col-xl-12" data-toggle="modal" data-target="#confirmationModal">
-          Launch Modal
-        </button>
-      </card-body>
-    </card>
-  </div>
-</div>
+</page-body>
 
 <modal modalId="defaultModal">
   <modal-title>
