--- a/src/app/pages/@trello/shared/loading-projects/loading-projects.component.html
+++ b/src/app/pages/@trello/shared/loading-projects/loading-projects.component.html
@@ -1,7 +1,7 @@
 <card>
   <card-header>
     <card-title>
-      Loading Trello Projects
+      <h1> Loading Trello Projects </h1>
     </card-title>
   </card-header>
 
