--- a/src/app/@theme/assets/scss/theme.scss
+++ b/src/app/@theme/assets/scss/theme.scss
@@ -7,13 +7,15 @@ Convention for CSS ordering is done using https://csscomb.herokuapp.com/online
 @import "./theme-alert.scss";
 @import "./theme-table.scss";
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,600;0,700;0,900;1,400&display=swap');
+
 * {
   margin: 0;
   padding: 0;
 }
 
 body {
-  font-family: 'poppins-regular', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 15px;
 
   color: color(theme, text-paragraph);
@@ -27,26 +29,22 @@ h4,
 h5,
 h6 {
   color: color(theme, text-heading);
-  font-family: 'poppins-regular', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 h1 {
-  line-height: 40px;
   font-size: 36px;
 }
 
 h2 {
-  line-height: 36px;
   font-size: 24px;
 }
 
 h3 {
-  line-height: 30px;
   font-size: 21px;
 }
 
 h4 {
-  line-height: 22px;
   font-size: 18px;
 }
 
@@ -56,7 +54,6 @@ h5 {
 }
 
 h6 {
-  line-height: 16px;
   font-size: 14px;
 }
 
