--- a/src/app/@theme/components/card/card.component.scss
+++ b/src/app/@theme/components/card/card.component.scss
@@ -8,45 +8,45 @@
 }
 
 .card-header {
-  padding: 13px 23px;
+  padding: 10px 30px;
+  min-height: 70px;
+
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
 
   border-bottom: 1px solid color(theme, backdrop-outline);
   background-color: transparent;
-
-  ::ng-deep img {
-    width: 100%;
-    margin: 10px 0;
-    border-radius: 5px;
-  }
 }
 
 .card-title {
-  font-size: 18px;
-  font-weight: 500;
-  line-height: 1.8;
+  margin: 0;
 
-  margin-bottom: 0;
+  ::ng-deep h1 {
+    font-size: 19px;
+    font-weight: 700;
 
-  color: color(theme, text-heading);
+    line-height: 35px;
+    margin-bottom: 0;
+
+    color: color(theme, text-heading);
+  }
+
+  ::ng-deep p {
+    font-size: 13px;
+    margin-bottom: 0;
+
+    color: color(theme, text-paragraph);
+  }
 }
 
-.card-subtitle {
-  font-size: 14px;
-
-  margin-top: 4px;
-
-  color: color(theme, text-paragraph);
-}
-
-.card-tools .row {
-  margin: -2px 0 0 0;
+.card-tools {
+  display: flex;
+  line-height: 35px;
 
   ::ng-deep .btn {
-    font-size: 14px;
-    font-weight: 500;
-
-    margin-left: 18px;
-    padding: 6px 16px;
+    font-size: 13px;
+    margin-left: 15px;
 
     color: color(theme, text-white);
     border-color: color(theme, primary-dark);
@@ -65,5 +65,5 @@
 }
 
 .card-body {
-  padding: 14px 23px;
+  padding: 10px 30px;
 }
