--- a/src/app/@theme/components/form/dropdown-checkbox/dropdown-checkbox.component.html
+++ b/src/app/@theme/components/form/dropdown-checkbox/dropdown-checkbox.component.html
@@ -1,14 +1,12 @@
 <form [formGroup]="dropdownForm">
-  <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+  <button class="btn dropdown-toggle" data-bs-toggle="dropdown">
     <ng-content></ng-content>
   </button>
 
   <ul class="dropdown-menu dropdown-checkbox">
     <li [formArrayName]="dropdownArray" *ngFor="let checkbox of checkboxArray; let i = index">
-      <label>
-        <input type="checkbox" [formControlName]="i">
-        <span> {{checkbox}} </span>
-      </label>
+      <input type="checkbox" [formControlName]="i">
+      <span> {{checkbox}} </span>
     </li>
   </ul>
 </form>
