--- a/src/app/@theme/components/modal/confirmation-modal/confirmation-modal.component.html
+++ b/src/app/@theme/components/modal/confirmation-modal/confirmation-modal.component.html
@@ -8,13 +8,13 @@
 
     <div class="row">
       <div class="col-xl-6">
-        <button type="button" class="btn btn-success col-xl-12" (click)="confirmAction()" data-dismiss="modal">
+        <button type="button" class="btn btn-success col-xl-12" (click)="confirmAction()" data-bs-dismiss="modal">
           <i class="fas fa-check"></i>
         </button>
       </div>
 
       <div class="col-xl-6">
-        <button type="button" class="btn btn-danger col-xl-12" (click)="declineAction()" data-dismiss="modal">
+        <button type="button" class="btn btn-danger col-xl-12" (click)="declineAction()" data-bs-dismiss="modal">
           <i class="fas fa-times"></i>
         </button>
       </div>
