--- a/src/app/@theme/components/modal/modal-title.component.html
+++ b/src/app/@theme/components/modal/modal-title.component.html
@@ -3,7 +3,5 @@
     <ng-content></ng-content>
   </h4>
 
-  <button type="button" class="close" data-dismiss="modal">
-    <span aria-hidden="true">&times;</span>
-  </button>
+  <button type="button" class="btn-close" data-bs-dismiss="modal"> </button>
 </div>
