--- a/src/app/pages/@theme/tables/tables.component.html
+++ b/src/app/pages/@theme/tables/tables.component.html
@@ -1,353 +1,353 @@
-<div class="row">
-  <div class="col-xl-12">
-    <page-header></page-header>
-  </div>
+<page-header></page-header>
 
-  <div class="col-xl-4">
-    <card>
-      <card-header>
-        <card-title>
-          Basic Table
-        </card-title>
-      </card-header>
+<page-body>
+  <div class="row">
+    <div class="col-xl-4">
+      <card>
+        <card-header>
+          <card-title>
+            <h1> Basic Table </h1>
+          </card-title>
+        </card-header>
 
-      <card-body>
-        <table class="table">
-          <thead>
-            <tr>
-              <th>#</th>
-              <th>First</th>
-              <th>Last</th>
-              <th>Handle</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>1</td>
-              <td>Mark</td>
-              <td>Otto</td>
-              <td>@mdo</td>
-            </tr>
-            <tr>
-              <td>2</td>
-              <td>Jacob</td>
-              <td>Thornton</td>
-              <td>@fat</td>
-            </tr>
-            <tr>
-              <td>3</td>
-              <td>Larry</td>
-              <td>the Bird</td>
-              <td>@twitter</td>
-            </tr>
-          </tbody>
-        </table>
-      </card-body>
-    </card>
-  </div>
-
-  <div class="col-xl-4">
-    <card>
-      <card-header>
-        <card-title>
-          Table Striped Light
-        </card-title>
-      </card-header>
-
-      <card-body>
-        <table class="table table-striped">
-          <thead>
-            <tr>
-              <th>#</th>
-              <th>First</th>
-              <th>Last</th>
-              <th>Handle</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>1</td>
-              <td>Mark</td>
-              <td>Otto</td>
-              <td>@mdo</td>
-            </tr>
-            <tr>
-              <td>2</td>
-              <td>Jacob</td>
-              <td>Thornton</td>
-              <td>@fat</td>
-            </tr>
-            <tr>
-              <td>3</td>
-              <td>Larry</td>
-              <td>the Bird</td>
-              <td>@twitter</td>
-            </tr>
-          </tbody>
-        </table>
-      </card-body>
-    </card>
-  </div>
-
-  <div class="col-xl-4">
-    <card>
-      <card-header>
-        <card-title>
-          Bordered Table
-        </card-title>
-      </card-header>
-
-      <card-body>
-        <table class="table table-bordered">
-          <thead>
-            <tr>
-              <th>#</th>
-              <th>First</th>
-              <th>Last</th>
-              <th>Handle</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>1</td>
-              <td>Mark</td>
-              <td>Otto</td>
-              <td>@mdo</td>
-            </tr>
-            <tr>
-              <td>2</td>
-              <td>Jacob</td>
-              <td>Thornton</td>
-              <td>@fat</td>
-            </tr>
-            <tr>
-              <td>3</td>
-              <td>Larry</td>
-              <td>the Bird</td>
-              <td>@twitter</td>
-            </tr>
-          </tbody>
-        </table>
-      </card-body>
-    </card>
-  </div>
-
-  <div class="col-xl-4">
-    <card>
-      <card-header>
-        <card-title>
-          Hoverable Rows Light
-        </card-title>
-      </card-header>
-
-      <card-body>
-        <table class="table table-hover">
-          <thead>
-            <tr>
-              <th>#</th>
-              <th>First</th>
-              <th>Last</th>
-              <th>Handle</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>1</td>
-              <td>Mark</td>
-              <td>Otto</td>
-              <td>@mdo</td>
-            </tr>
-            <tr>
-              <td>2</td>
-              <td>Jacob</td>
-              <td>Thornton</td>
-              <td>@fat</td>
-            </tr>
-            <tr>
-              <td>3</td>
-              <td>Larry</td>
-              <td>the Bird</td>
-              <td>@twitter</td>
-            </tr>
-          </tbody>
-        </table>
-      </card-body>
-    </card>
-  </div>
-
-  <div class="col-xl-4">
-    <card>
-      <card-header>
-        <card-title>
-          Small Table
-        </card-title>
-      </card-header>
-
-      <card-body>
-        <table class="table table-sm">
-          <thead>
-            <tr>
-              <th>#</th>
-              <th>First</th>
-              <th>Last</th>
-              <th>Handle</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>1</td>
-              <td>Mark</td>
-              <td>Otto</td>
-              <td>@mdo</td>
-            </tr>
-            <tr>
-              <td>2</td>
-              <td>Jacob</td>
-              <td>Thornton</td>
-              <td>@fat</td>
-            </tr>
-            <tr>
-              <td>3</td>
-              <td>Larry</td>
-              <td>the Bird</td>
-              <td>@twitter</td>
-            </tr>
-          </tbody>
-        </table>
-      </card-body>
-    </card>
-  </div>
-
-  <div class="col-xl-4">
-    <card>
-      <card-header>
-        <card-title>
-          Responsive Tables
-        </card-title>
-      </card-header>
-
-      <card-body>
-        <div class="table-responsive-xl" data-simplebar data-simplebar-auto-hide="false">
+        <card-body>
           <table class="table">
             <thead>
               <tr>
                 <th>#</th>
-                <th>Heading</th>
-                <th>Heading</th>
-                <th>Heading</th>
-                <th>Heading</th>
-                <th>Heading</th>
-                <th>Heading</th>
-                <th>Heading</th>
-                <th>Heading</th>
-                <th>Heading</th>
+                <th>First</th>
+                <th>Last</th>
+                <th>Handle</th>
               </tr>
             </thead>
             <tbody>
               <tr>
                 <td>1</td>
-                <td>Cell</td>
-                <td>Cell</td>
-                <td>Cell</td>
-                <td>Cell</td>
-                <td>Cell</td>
-                <td>Cell</td>
-                <td>Cell</td>
-                <td>Cell</td>
-                <td>Cell</td>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdo</td>
               </tr>
               <tr>
                 <td>2</td>
-                <td>Cell</td>
-                <td>Cell</td>
-                <td>Cell</td>
-                <td>Cell</td>
-                <td>Cell</td>
-                <td>Cell</td>
-                <td>Cell</td>
+                <td>Jacob</td>
+                <td>Thornton</td>
+                <td>@fat</td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>Larry</td>
+                <td>the Bird</td>
+                <td>@twitter</td>
+              </tr>
+            </tbody>
+          </table>
+        </card-body>
+      </card>
+    </div>
+
+    <div class="col-xl-4">
+      <card>
+        <card-header>
+          <card-title>
+            <h1> Table Striped Light </h1>
+          </card-title>
+        </card-header>
+
+        <card-body>
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>#</th>
+                <th>First</th>
+                <th>Last</th>
+                <th>Handle</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>Jacob</td>
+                <td>Thornton</td>
+                <td>@fat</td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>Larry</td>
+                <td>the Bird</td>
+                <td>@twitter</td>
+              </tr>
+            </tbody>
+          </table>
+        </card-body>
+      </card>
+    </div>
+
+    <div class="col-xl-4">
+      <card>
+        <card-header>
+          <card-title>
+            <h1> Bordered Table </h1>
+          </card-title>
+        </card-header>
+
+        <card-body>
+          <table class="table table-bordered">
+            <thead>
+              <tr>
+                <th>#</th>
+                <th>First</th>
+                <th>Last</th>
+                <th>Handle</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>Jacob</td>
+                <td>Thornton</td>
+                <td>@fat</td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>Larry</td>
+                <td>the Bird</td>
+                <td>@twitter</td>
+              </tr>
+            </tbody>
+          </table>
+        </card-body>
+      </card>
+    </div>
+
+    <div class="col-xl-4">
+      <card>
+        <card-header>
+          <card-title>
+            <h1> Hoverable Rows Light </h1>
+          </card-title>
+        </card-header>
+
+        <card-body>
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th>#</th>
+                <th>First</th>
+                <th>Last</th>
+                <th>Handle</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>Jacob</td>
+                <td>Thornton</td>
+                <td>@fat</td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>Larry</td>
+                <td>the Bird</td>
+                <td>@twitter</td>
+              </tr>
+            </tbody>
+          </table>
+        </card-body>
+      </card>
+    </div>
+
+    <div class="col-xl-4">
+      <card>
+        <card-header>
+          <card-title>
+            <h1> Small Table </h1>
+          </card-title>
+        </card-header>
+
+        <card-body>
+          <table class="table table-sm">
+            <thead>
+              <tr>
+                <th>#</th>
+                <th>First</th>
+                <th>Last</th>
+                <th>Handle</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>Jacob</td>
+                <td>Thornton</td>
+                <td>@fat</td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>Larry</td>
+                <td>the Bird</td>
+                <td>@twitter</td>
+              </tr>
+            </tbody>
+          </table>
+        </card-body>
+      </card>
+    </div>
+
+    <div class="col-xl-4">
+      <card>
+        <card-header>
+          <card-title>
+            <h1> Responsive Tables </h1>
+          </card-title>
+        </card-header>
+
+        <card-body>
+          <div class="table-responsive-xl" data-simplebar data-simplebar-auto-hide="false">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th>#</th>
+                  <th>Heading</th>
+                  <th>Heading</th>
+                  <th>Heading</th>
+                  <th>Heading</th>
+                  <th>Heading</th>
+                  <th>Heading</th>
+                  <th>Heading</th>
+                  <th>Heading</th>
+                  <th>Heading</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>1</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                </tr>
+                <tr>
+                  <td>2</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                </tr>
+                <tr>
+                  <td>3</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </card-body>
+      </card>
+    </div>
+
+    <div class="col-xl-12">
+      <card>
+        <card-header>
+          <card-title>
+            <h1> Contextual Classes </h1>
+          </card-title>
+        </card-header>
+
+        <card-body>
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Class</th>
+                <th>Heading</th>
+                <th>Heading</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr class="table-active">
+                <td>Active</td>
                 <td>Cell</td>
                 <td>Cell</td>
               </tr>
               <tr>
-                <td>3</td>
+                <td>Default</td>
                 <td>Cell</td>
                 <td>Cell</td>
+              </tr>
+              <tr class="table-primary">
+                <td>Primary</td>
                 <td>Cell</td>
                 <td>Cell</td>
+              </tr>
+              <tr class="table-success">
+                <td>Success</td>
                 <td>Cell</td>
                 <td>Cell</td>
+              </tr>
+              <tr class="table-danger">
+                <td>Danger</td>
                 <td>Cell</td>
+                <td>Cell</td>
+              </tr>
+              <tr class="table-warning">
+                <td>Warning</td>
+                <td>Cell</td>
+                <td>Cell</td>
+              </tr>
+              <tr class="table-light">
+                <td>Light</td>
+                <td>Cell</td>
+                <td>Cell</td>
+              </tr>
+              <tr class="table-dark">
+                <td>Dark</td>
                 <td>Cell</td>
                 <td>Cell</td>
               </tr>
             </tbody>
           </table>
-        </div>
-      </card-body>
-    </card>
+        </card-body>
+      </card>
+    </div>
   </div>
-
-  <div class="col-xl-12">
-    <card>
-      <card-header>
-        <card-title>
-          Contextual Classes
-        </card-title>
-      </card-header>
-
-      <card-body>
-        <table class="table">
-          <thead>
-            <tr>
-              <th>Class</th>
-              <th>Heading</th>
-              <th>Heading</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr class="table-active">
-              <td>Active</td>
-              <td>Cell</td>
-              <td>Cell</td>
-            </tr>
-            <tr>
-              <td>Default</td>
-              <td>Cell</td>
-              <td>Cell</td>
-            </tr>
-            <tr class="table-primary">
-              <td>Primary</td>
-              <td>Cell</td>
-              <td>Cell</td>
-            </tr>
-            <tr class="table-success">
-              <td>Success</td>
-              <td>Cell</td>
-              <td>Cell</td>
-            </tr>
-            <tr class="table-danger">
-              <td>Danger</td>
-              <td>Cell</td>
-              <td>Cell</td>
-            </tr>
-            <tr class="table-warning">
-              <td>Warning</td>
-              <td>Cell</td>
-              <td>Cell</td>
-            </tr>
-            <tr class="table-light">
-              <td>Light</td>
-              <td>Cell</td>
-              <td>Cell</td>
-            </tr>
-            <tr class="table-dark">
-              <td>Dark</td>
-              <td>Cell</td>
-              <td>Cell</td>
-            </tr>
-          </tbody>
-        </table>
-      </card-body>
-    </card>
-  </div>
-</div>
+</page-body>
