--- a/src/app/pages/@trello/shared/no-columns/no-columns.component.scss
+++ b/src/app/pages/@trello/shared/no-columns/no-columns.component.scss
@@ -1,13 +1,8 @@
 @import "~src/app/@theme/assets/scss/theme-colour.scss";
 
-.form-control,
-.input-group-text {
+.form-control {
   height: auto;
   padding: 11px 17px;
   color: color(theme, text-white) !important;
   background: color(theme, primary-dark) !important;
-}
-
-.input-group-text::before {
-  vertical-align: middle;
 }
