--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,44 +1,44 @@
-<div class="row">
-  <div class="col-xl-12">
-    <page-header></page-header>
+<page-header></page-header>
+
+<page-body>
+  <div class="row">
+    <div class="col-xl-6">
+      <card class="project">
+        <a routerLink="/theme/alerts">
+          <card-body>
+            <div class="row">
+              <div class="col-xl-3">
+                <i class="fas fa-pencil-ruler rounded-circle"></i>
+              </div>
+
+              <div class="col-xl-9">
+                <h4> Dashboard Theme </h4>
+                <p> The styled and created components are used to build the other pages which are shown in the dashboard theme section. </p>
+              </div>
+            </div>
+          </card-body>
+        </a>
+      </card>
+    </div>
+
+    <div class="col-xl-6">
+      <card class="project">
+
+        <a routerLink="/trello/projects">
+          <card-body>
+            <div class="row">
+              <div class="col-xl-3">
+                <i class="fas fa-chart-bar rounded-circle"></i>
+              </div>
+
+              <div class="col-xl-9">
+                <h4> Trello System </h4>
+                <p> The Trello system provides a visual insight into the Trello project (requires the project to be public) without affecting the original project. </p>
+              </div>
+            </div>
+          </card-body>
+        </a>
+      </card>
+    </div>
   </div>
-
-  <div class="col-xl-6">
-    <card class="project">
-      <a routerLink="/theme/alerts">
-        <card-body>
-          <div class="row">
-            <div class="col-xl-3">
-              <i class="fas fa-pencil-ruler rounded-circle"></i>
-            </div>
-
-            <div class="col-xl-9">
-              <h4> Dashboard Theme </h4>
-              <p> The styled and created components are used to build the other sections are represented in the dashboard theme section. </p>
-            </div>
-          </div>
-        </card-body>
-      </a>
-    </card>
-  </div>
-
-  <div class="col-xl-6">
-    <card class="project">
-
-      <a routerLink="/trello/projects">
-        <card-body>
-          <div class="row">
-            <div class="col-xl-3">
-              <i class="fas fa-chart-bar rounded-circle"></i>
-            </div>
-
-            <div class="col-xl-9">
-              <h4> Trello Analytics </h4>
-              <p> The Trello analytics provides a visual insight on the provided Trello board which affecting the original project. </p>
-            </div>
-          </div>
-        </card-body>
-      </a>
-    </card>
-  </div>
-</div>
+</page-body>
