--- a/src/app/shared/components/top-navigation/top-navigation.component.html
+++ b/src/app/shared/components/top-navigation/top-navigation.component.html
@@ -1,53 +1,53 @@
 <div class="topNavigation">
   <nav class="navbar navbar-header fixed-top navbar-expand-lg">
-    <div class="logo-banner">
-      <h4 class="fullLogoBanner"> Dashboard System </h4>
-      <h4 class="miniLogoBanner"> DS </h4>
-    </div>
-
-    <div class="navbar-collapse">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" (click)="onToggleSidebar()"> <i class="fas fa-bars"></i> </a>
-        </li>
-      </ul>
-
-      <div class="navbar-nav mx-auto">
-        <div class="center-logo">
-          <h4> Dashboard System </h4>
-        </div>
+    <div class="container-fluid">
+      <div class="logo-banner">
+        <h4 class="fullLogoBanner"> Dashboard System </h4>
+        <h4 class="miniLogoBanner"> DS </h4>
       </div>
 
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" data-toggle="dropdown">
-            <i class="fas fa-database"></i>
-          </a>
+      <div class="navbar-collapse">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" (click)="onToggleSidebar()"> <i class="fas fa-bars"></i> </a>
+          </li>
+        </ul>
 
-          <div class="dropdown-menu">
-            <div class="header">
-              Website Data
-            </div>
+        <div class="navbar-nav mx-auto">
+          <div class="center-logo">
+            <h4> Dashboard System </h4>
+          </div>
+        </div>
 
-            <div class="row">
-              <a class="col-xl-6" (click)="downloadData()">
-                <div class="dropdown-links">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" data-bs-toggle="dropdown">
+              <i class="fas fa-cog"></i>
+            </a>
+
+            <div class="dropdown-menu">
+              <div class="header">
+                Website Data
+              </div>
+
+              <a (click)="downloadData()">
+                <div class="item">
                   <i class="fas fa-download"></i>
                   <span> Download </span>
                 </div>
               </a>
 
               <input type="file" accept=".json" hidden #loadData (change)="importData($event)">
-              <a class="col-xl-6" (click)="loadData.click()">
-                <div class="dropdown-links">
+              <a (click)="loadData.click()">
+                <div class="item">
                   <i class="fas fa-upload"></i>
                   <span> Import </span>
                 </div>
               </a>
             </div>
-          </div>
-        </li>
-      </ul>
+          </li>
+        </ul>
+      </div>
     </div>
   </nav>
 </div>
