--- a/src/app/shared/components/content-footer/content-footer.component.html
+++ b/src/app/shared/components/content-footer/content-footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer">
   <div class="container-fluid text-center">
-    <p> 2021 <i class="far fa-copyright"></i> Dashboard System. All Rights Reserved </p>
+    <p> {{currentYear}} <i class="far fa-copyright"></i> Dashboard System. All Rights Reserved </p>
   </div>
 </footer>
